--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="col-md-7 order-md-2 mx-auto">
                 <h2 class="featurette-heading fw-normal lh-1">Expansion and Growth <span class="text-body-secondary">A
                         thriving campus.</span></h2>
-                <p class="lead">In the 2022s, our college expanded with new departments, labs, and a library, allowing
+                <p class="lead">In the 2022's, our college expanded with new departments, labs, and a library, allowing
                     students to explore diverse fields of study and develop their skills and make them to advance.</p>
             </div>
             <div class="col-md-5 mx-auto" style="height:500px; overflow:hidden;">
@@ -414,5 +414,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
