--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
                 height: 300px;
             }
         }
+        .main-section {
+            height: 70vh;
+            width: 100%;
+            background-color: #878DC4;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+        }
+
+        .main-section h1 {
+            margin: 1vh 0;
+            margin-top: 1vh 0;
+            font-size: 5vw;
+            text-transform: uppercase;
+            font-weight: 750;
+            line-height: 1;
+            font-family: sans-serif;
+
+
+        }
     </style>
 </head>
 
@@ -98,6 +120,22 @@
 
 
     <!-- End of nav bar -->
+
+    
+    <!-- main section -->
+
+    <section>
+
+        <div class="main-section">
+
+            <h1>codes college kot sultan </h1>
+
+            <h1>learn AI & Advance </h1>
+            <h1> skills</h1>
+
+
+        </div>
+    </section>
 
     <!-- slider section -->
 
@@ -417,3 +455,4 @@
 
 
 </html>
+
